[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/TelaInicial/planet.png" type="Texture" id=1]
[ext_resource path="res://Assets/TelaInicial/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/TelaInicial/rocket.png" type="Texture" id=3]
[ext_resource path="res://Assets/TelaInicial/logoOutOfBounds.png" type="Texture" id=4]
[ext_resource path="res://Scenes/TelaInicial/TelaInicial.gd" type="Script" id=5]
[ext_resource path="res://Assets/TelaInicial/logoRainbowDev.png" type="Texture" id=6]

[node name="Tela Inicial 1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 91 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 71, 21 )
scale = Vector2( 0.193182, 0.193182 )
texture = ExtResource( 4 )

[node name="Planet" type="Sprite" parent="Logo"]
position = Vector2( 473.647, 705.588 )
scale = Vector2( 2.08201, 0.663626 )
texture = ExtResource( 1 )

[node name="Rocket" type="Sprite" parent="Logo/Planet"]
position = Vector2( -312.424, -364.455 )
scale = Vector2( 0.28737, 0.711555 )
texture = ExtResource( 3 )

[node name="SemTÃ­tulo" type="Sprite" parent="Logo"]
position = Vector2( 936.94, 31.0587 )
scale = Vector2( 2.4203, 2.87608 )
texture = ExtResource( 6 )

[node name="StartBtn" type="Button" parent="."]
margin_left = 135.0
margin_top = 39.0
margin_right = 176.0
margin_bottom = 59.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitBtn" type="Button" parent="."]
margin_left = 135.0
margin_top = 91.0
margin_right = 176.0
margin_bottom = 111.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credito" type="Button" parent="."]
margin_left = 257.0
margin_top = 158.0
margin_right = 315.0
margin_bottom = 178.0
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 37, 126 )
scale_amount = 2.0

[connection signal="pressed" from="StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Credito" to="." method="_on_Credito_pressed"]
